# mc-perf-limiter

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
gpu_hook/: CMakeLists.txt  gpu_hook.cpp
include/: app.h  cpu_limiter.h  gpu_limiter.h  io_limiter.h  ipc_types.h  memory_limiter.h  process_scanner.h  theme_detector.h  webview_bridge.h  window.h
plans/: PLAN.md
scripts/: setup.py
src/: app.cpp  cpu_limiter.cpp  gpu_limiter.cpp  io_limiter.cpp  main.cpp  memory_limiter.cpp  process_scanner.cpp  theme_detector.cpp  webview_bridge.cpp  window.cpp
ui/: generate.py  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: bridge.js  bridge.ts  main.js  main.ts  theme.js  theme.ts
ui/src/styles/: base.css
